--- a/.config
+++ b/.config
@@ -445,6 +445,11 @@ CONFIG_PACKAGE_luci-i18n-filetransfer-zh-cn=y
 CONFIG_PACKAGE_luci-app-poweroff=y
 CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 
+#  网络唤醒
+CONFIG_PACKAGE_luci-app-wol=y
+
+#  动态域名
+CONFIG_PACKAGE_luci-app-ddns=y
 ##############################################################################################
 
 #  服务
