--- a/.config
+++ b/.config
@@ -532,6 +532,9 @@ CONFIG_PACKAGE_luci-app-openclash=y
 #CONFIG_PACKAGE_luci-app-adbyby-plus=y
 #CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=y
 
+# luci-app-smartdns
+
+
 ##############################################################################################
 
 #  NAS
